--- a/form.html
+++ b/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raul's Little Library</title>
@@ -54,85 +54,10 @@
               <input type="email" name="email" id="email" class="form-control" />
             </div>
 
-            <!-- phone -->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <label for="phone">Phone</label>
-              <input type="text" name="phone" id="phone" placeholder="(###) ###-####" class="form-control" />
-            </div>
-
-            <!-- Start Date - date -->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <label for="start-date">Start Date</label>
-              <input type="date" id="start-date" name="startDate" required class="form-control" />
-            </div>
-
-            <!-- Tshirt - Select field -->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <label for="t-shirt">T-Shirt Size</label>
-              <select id="t-shirt" required class="form-select">
-                <option value="">Select T-shirt size</option>
-                <option value="XXS">XXS</option>
-                <option value="XS">XS</option>
-                <option value="S">S</option>
-                <option value="M">M</option>
-                <option value="L">L</option>
-                <option value="XL">XL</option>
-                <option value="XXL">XXL</option>
-                <option value="CUSTOM">CUSTOM</option>
-              </select>
-              <input type="text" id="custom" name="custom" placeholder="Please input a custom size" disabled class="form-control" />
-            </div>
-
-            <!-- Tshirt Color - Color-->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <label for="color">Tshirt Color</label>
-              <input type="color" name="color" id="color" class="form-control form-control-color" />
-            </div>
-
-            <!-- Backgroun Check - Upload file -->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <label for="background-check">Background Check</label>
-              <input type="file" id="background-check" accept=".pdf" class="form-control" />
-            </div>
-
-            <!-- Participating In - Radio Buttons -->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <strong>Participating In</strong><br />
-
-              <input type="radio" name="participation" id="fashion-show" value="Fashion Show" required class="form-check-input radio" />
-              <label for="fashion-show">Fashion Show</label>
-
-              <input type="radio" name="participation" id="donations" value="Donations" required class="form-check-input radio" />
-              <label for="donations">Donations</label>
-
-              <input type="radio" name="participation" id="expectator" value="Expectator" required class="form-check-input radio" />
-              <label for="expectator">Expectator</label>
-            </div>
-
-            <!-- Time of Day - Checkbox Fields -->
-            <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-              <strong>Time of Day</strong><br />
-
-              <input type="checkbox" name="timeOfDay" id="time-of-day-morning" value="Morning" required class="form-check-input checkbox timeOfDay" />
-              <label for="time-of-day-morning">Morning</label>
-
-              <input type="checkbox" name="timeOfDay" id="time-of-day-afternoon" value="Afternoon" required class="form-check-input checkbox timeOfDay" />
-              <label for="time-of-day-afternoon">Afternoon</label>
-
-              <input type="checkbox" name="timeOfDay" id="time-of-day-evening" value="Evening" required class="form-check-input checkbox timeOfDay" />
-              <label for="time-of-day-evening">Evening</label>
-            </div>
-
             <!-- Comments -->
             <div class="col-12">
-              <label for="about-you">Tell us about you</label><br />
+              <label for="about-you">Tell us about the book you read, the ones you'd like to see, and just about anything you'd like to share</label><br />
               <textarea name="about-you" id="about-you" class="form-control"></textarea>
-            </div>
-
-            <!-- Terms and Conditions - Checkbox with toggle switch-->
-            <div class="col-12 form-check form-switch">
-              <input required type="checkbox" name="terms" id="terms-and-conditions" value="Yes" class="form-check-input checkbox" />
-              <label for="terms-and-conditions">I Accept the Terms and Conditions</label>
             </div>
 
             <!-- submit button -->
