--- a/form.html
+++ b/form.html
@@ -56,7 +56,7 @@
 
             <!-- submit button -->
             <div class="col-12">
-              <input type="submit" id="submit" name="submit" value="Volunteer  Now" class="submit btn btn-primary" />
+              <input type="submit" id="submit" name="submit" value="Submit" class="submit btn btn-primary" />
             </div>
           </div>
         </form>
