--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
     <!-- end header -->
 
     <main>
-      <!-- Begin Form --->
+      <!-- Begin Form -->
       <div class="web-form">
         <form class="needs-validation" data-netlify="true" novalidate>
           <div class="row">
