--- a/form.html
+++ b/form.html
@@ -26,9 +26,9 @@
     <!-- end header -->
 
     <main>
-      <!-- Begin Form --->
+      <!-- Begin Form -->
       <div class="web-form">
-        <form class="needs-validation" data-netlify="true" novalidate>
+        <form class="needs-validation" data-netlify="true" novalidate name="form-v2">
           <div class="row">
             <!-- first name -->
             <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
