--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="alert alert-warning top-intro">
+          <div class="alert alert-warning alert-dismissible fade show top-intro" role="alert">
             <p>Hello, my name is Raul Gonzalez, and this page is part of a web design class that I teach at Blinn College. This semester, inspired by a student, I combined my passion for wood work and passion for web design.</p>
             <p>This page is an ongoing project, which will be completed by the end of the semester in December. However, I'm thinking that by the end of the semester, I may keep the page and tailor it to the little library's needs.</p>
             <p>Eventually, the students and I will be building a web form, add a gallery page and add links between pages.</p>
