--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <header-component></header-component>
     <!-- end header -->
 
+    <!--
     <main>
       <div class="container">
         <div class="row">
@@ -57,7 +58,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
         </div>
-      </div>
+      </div>-->
 
       <!-- begin carousel -->
       <div id="carouselExampleCaptions" class="carousel slide">
